fixed navbar overlapping issue

--- a/client-side/src/components/Navbar/Nav.module.css
+++ b/client-side/src/components/Navbar/Nav.module.css
@@ -60,6 +60,7 @@ header {
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   position: fixed;
   width: 100%;
+  z-index: 9;
   /* border-bottom: 1px solid white; */
 }
 h1 {
